changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Display warning if an animation only has one face.
Nicolas Weeger 2010-05-24

Support for building utils/mapper.c as crossfire-mapper.  The utility is not
built by default as it requires libgd (not normally required by the server).
crossfire-mapper is not needed to run a server, but it is useful for making
crossfire world maps for publishing via web server.  To build this utility,
specify --enable-mapper when running ./configure.
Kevin Bulgrien 2010-05-24

Add missing function prototypes. Use 'const' where possible.
Nicolas Weeger 2010-05-23

Speed up compilation with precompiled headers.
Nicolas Weeger 2010-05-22

Reply edition panel.
Nicolas Weeger 2010-05-22

Fix various crashes.
Nicolas Weeger 2010-05-22

'pre' and 'post' conditions edition.
Nicolas Weeger 2010-05-22

Extract widget, enable 'message' edition.
Nicolas Weeger 2010-05-22

Preliminary rule edition ("match" only for now). Rule file saving support.
Nicolas Weeger 2010-05-22

Downcast type, remove const, which apparently cause issues.
Nicolas Weeger 2010-05-21

Update help text for filters.
Nicolas Weeger 2010-05-21

Don't display an empty menu on right click.
Nicolas Weeger 2010-05-19

Add Race to the set of things that can be filtered on in CRE
Brendan Lally 2010-05-19

Implement requestinfo for race_info and class_info.  Note there is a bug with
the archetypes in that many archetypes have type==37 (CLASS) which are not
actually class descriptors.
socket/request.c: New functions to send class/race information.
doc/Developers/protocol: Update document for format of race/class_info
  requestinfo.
MSW 2010-05-18